# aura

./: .cursorrules  .dockerignore  .env.example  .gitignore  .portfolio.json  CACHING_GUIDE.md  CHANGELOG.md  CLAUDE.md  COMMUTE_INTELLIGENCE.md  GOOGLE_CALENDAR_SETUP.md  IMPLEMENTATION_STRATEGY.md  Makefile  PLANNER_RESEARCH.md  PRODUCTION_DEPLOYMENT.md  README.md  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml  render.yaml  requirements.txt  run.py  tsconfig.json  vitest.config.ts
.claude/: FEATURES.md  QUICKSTART.md  README.md  config.json  settings.json  setup.sh
.claude/hooks/: check-docs-drift.sh  post-merge.sh  pre-commit.sh  pre-push.sh
.claude/skills/: add-tool.json  api-test.json  debug-cache.json  health-check.json  restart-service.json  service-logs.json  setup-env.json  test-all.json
.github/workflows/: ci.yml  e2e-tests.yml
app/: routes.ts
app/components/: Clock.test.tsx  Clock.tsx  CommuteDashboard.tsx  Dashboard.tsx  NotesWidget.tsx  PomodoroWidget.tsx
app/lib/: api.test.ts  storage.ts
app/routes/: api._index.ts  api.v1.chat.ts  (+2 more)
data/: weekend_preferences.example.json
deploy/: Caddyfile  deploy.sh  setup.sh
docker/: agent.Dockerfile  server.Dockerfile  ui.Dockerfile
docs/: NAVI_BOUNDARY.md  brain-vault-integration.md
e2e/: Dockerfile  README.md  pyproject.toml  run-e2e.sh
e2e/tests/: __init__.py  conftest.py  test_e2e_flow.py  test_smoke.py
fly/: agent.toml  deploy.sh  server.toml  ui.toml
mcp_server/: app.py  config.py  server.py
scripts/: vault_snapshot.py  weekend_planner.py
(+24 files in other folders)
