[project]
name = "aura-e2e-tests"
version = "0.1.0"
description = "End-to-end tests for Aura platform (UI -> Agent -> MCP Server)"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "e2e: End-to-end tests requiring all services",
    "smoke: Quick smoke tests for basic functionality",
    "slow: Slower tests that hit real AI endpoints",
]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
